v5.0/stay-updated/esignatures-release.md
---
type: page
title: API releases
listed: true
slug: esignatures-release
description: 
index_title: API releases
hidden: 
keywords: 
tags: 
---

The Yoti Sign API offers the convenience and simplicity of e-signing platforms, but with the added security of biometric verification and cryptographic signatures.

For information on their releases please click through this section.

### Quick Links

✏️[Developer docs](https://developers.yoti.com/identity-verification/getting-started)

ℹ️ [Further information](https://business.yoti.com/doc-scan/)

📧 [Integration help](mailto:clientsupport@yoti.com)

🏛 [Business help](https://www.yoti.com/contact-us/)

🖥 [Demo](https://yoti.world/yoti-doc-scan/) and [example projects](https://developers.yoti.com/identity-verification/quick-start)

---

### August-2021 Release

This was released on 11th August 2021.

{% badge type="success" text="NEW" /%} We have added the ability to customise the signing ceremony for the embedded envelopes (branding - add the company logo and change button colors)

{% badge type="success" text="NEW" /%} We have added the ability to sign using Yoti-auth for the embedded envelopes

---

### July-2021 Release

This was released on 6th July 2021.

{% badge type="success" text="NEW" /%} We have added two new web hook notifications: “envelope_ready“  and “signer completion“

{% badge type="success" text="NEW" /%} Ability to add a non-signing recipient (CC recipient) 

{% badge type="success" text="NEW" /%} Ability to request photo authentication when signing a document

{% badge type="success" text="NEW" /%}The exported template contains the payload that can be used for the xapi request

{% badge type="success" text="NEW" /%} Ability to lock the text-field dimensions

---

### June-2021 Release

This was released on 11th June 2021.

{% badge type="success" text="NEW" /%}Ability to edit recipients.

---

### May-2021 Release

This was released on 11th May 2021.

{% badge type="info" text="IMPROVEMENT" /%}We have added improvements to our pdf sanitisation

{% badge type="info" text="IMPROVEMENT" /%} Witness recipient requires at least one tag.

{% badge type="info" text="IMPROVEMENT" /%} more improvements to our email sending system.

{% badge type="info" text="IMPROVEMENT" /%} copy changes to the signing receipt.