v7.0/stay-updated/esignatures-release.md
---
type: page
title: API releases
listed: true
slug: esignatures-release
description: 
index_title: API releases
hidden: 
keywords: 
tags: 
---

The Yoti Sign API offers the convenience and simplicity of e-signing platforms, but with the added security of biometric verification and cryptographic signatures.

For information on their releases please click through this section.

### Quick Links

✏️[Developer docs](https://developers.yoti.com/identity-verification/getting-started)

ℹ️ [Further information](https://business.yoti.com/doc-scan/)

📧 [Integration help](mailto:clientsupport@yoti.com)

🏛 [Business help](https://www.yoti.com/contact-us/)

🖥 [Demo](https://yoti.world/yoti-doc-scan/) and [example projects](https://developers.yoti.com/identity-verification/quick-start)

---

## February 2022 release

This was released on 9th February 2022.

{% badge type="success" text="NEW" /%} We have added new endpoints for search/find envelope

---

## January 2022 Release

This was released on 12th January 2022.

{% badge type="success" text="NEW" /%} We have added the ability to use auto-tags also for witness recipients

{% badge type="success" text="NEW" /%} We have increased the auto-tagger limit to 30 recipients

---

### December 2021 Release

This was released on 7th December

{% badge type="success" text="NEW" /%}We have added the ability to set a read-only pre-filled value for the text field tag

{% badge type="success" text="NEW" /%}We have added the ability to set a redirect-url for envelope submission

---

### November 2021 Release

This was released on 3rd November

{% badge type="success" text="NEW" /%} We have added the ability to add an attachment tag

{% badge type="success" text="NEW" /%} We have increased the signer and cc recipient limit from 10 to 30

{% badge type="success" text="NEW" /%} We have added more details to our envelope status endpoint

---

### October 2021 Release

This was released on 18th October 2021.

{% badge type="success" text="NEW" /%} Wet look signatures.

{% badge type="success" text="NEW" /%} Ability to send a reminder using the xapi

{% badge type="success" text="NEW" /%} Conditional logic

---

### August-2021 Release

This was released on 11th August 2021.

{% badge type="success" text="NEW" /%} We have added the ability to customise the signing ceremony for the embedded envelopes (branding - add the company logo and change button colors)

{% badge type="success" text="NEW" /%} We have added the ability to sign using Yoti-auth for the embedded envelopes

---

### July-2021 Release

This was released on 6th July 2021.

{% badge type="success" text="NEW" /%} We have added two new web hook notifications: “envelope_ready“  and “signer completion“

{% badge type="success" text="NEW" /%} Ability to add a non-signing recipient (CC recipient) 

{% badge type="success" text="NEW" /%} Ability to request photo authentication when signing a document

{% badge type="success" text="NEW" /%}The exported template contains the payload that can be used for the xapi request

{% badge type="success" text="NEW" /%} Ability to lock the text-field dimensions

---

### June-2021 Release

This was released on 11th June 2021.

{% badge type="success" text="NEW" /%}Ability to edit recipients.

---

### May-2021 Release

This was released on 11th May 2021.

{% badge type="info" text="IMPROVEMENT" /%}We have added improvements to our pdf sanitisation

{% badge type="info" text="IMPROVEMENT" /%} Witness recipient requires at least one tag.

{% badge type="info" text="IMPROVEMENT" /%} more improvements to our email sending system.

{% badge type="info" text="IMPROVEMENT" /%} copy changes to the signing receipt.